Some refactoring, and add method reload()

--- a/index.html
+++ b/index.html
@@ -14,33 +14,32 @@
         <li><a href="#menu">menu</a></li>
         <li><a href="#faq">faq</a></li>
         <li><a href="#list">list</a></li>
+        <li><a href="#Test_faike">Test fake</a></li>
     </ul>
 
     <hr>
 
     <div class="block">
-        <h2>menu</h2>
         <a name="menu"></a>
+        <h2>menu</h2>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum inventore magnam molestias tempore maxime. Perferendis, nihil corporis nemo enim id magnam tempore rem. Magnam, quibusdam iusto consequatur eveniet alias illo.
     </div>
 
     <div class="block">
-        <h2>faq</h2>
         <a name="faq"></a>
+        <h2>faq</h2>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum inventore magnam molestias tempore maxime. Perferendis, nihil corporis nemo enim id magnam tempore rem. Magnam, quibusdam iusto consequatur eveniet alias illo.
     </div>
 
     <div class="block">
+        <a name="Test_faike_s"></a>
+        <h2>Test_faike</h2>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, et, accusantium, enim, veniam esse praesentium architecto ad recusandae dicta exercitationem amet aut totam omnis quis nulla corporis quisquam veritatis quam.
     </div>
 
     <div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, et, accusantium, enim, veniam esse praesentium architecto ad recusandae dicta exercitationem amet aut totam omnis quis nulla corporis quisquam veritatis quam.
-    </div>
-
-    <div class="block">
-        <h2>list</h2>
         <a name="list"></a>
+        <h2>list</h2>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum inventore magnam molestias tempore maxime. Perferendis, nihil corporis nemo enim id magnam tempore rem. Magnam, quibusdam iusto consequatur eveniet alias illo.
     </div>
 
