Adding method next() and prev()

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <li><a href="#menu">menu</a></li>
         <li><a href="#faq">faq</a></li>
         <li><a href="#list">list</a></li>
-        <li><a href="#Test_faike">Test fake</a></li>
+        <li><a href="#Test_fake">Test fake</a></li>
+    </ul>
+    <ul class="next-prev">
+        <li><a href="#" class="prev">prev</a></li>
+        <li><a href="#" class="next">next</a></li>
     </ul>
 
     <hr>
@@ -32,9 +36,9 @@
     </div>
 
     <div class="block">
-        <a name="Test_faike_s"></a>
-        <h2>Test_faike</h2>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, et, accusantium, enim, veniam esse praesentium architecto ad recusandae dicta exercitationem amet aut totam omnis quis nulla corporis quisquam veritatis quam.
+        <a name="Test_fake_s"></a>
+        <h2>Test_fake_s</h2>
+        In this link not right anchor
     </div>
 
     <div class="block">
