Adding options of active element

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
  <body>
     <ul class="menu ease">
-        <li><a href="#menu">menu</a></li>
+        <li><a class="active" href="#menu">menu</a></li>
         <li><a href="#faq">faq</a></li>
         <li><a href="#Test_fake">Test fake</a></li>
         <li><a href="#list">list</a></li>
