--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <hr>
 
     <div class="block">
-        <a name="menu"></a>
+        <div id="menu"></div>
         <h2>menu</h2>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum inventore magnam molestias tempore maxime. Perferendis, nihil corporis nemo enim id magnam tempore rem. Magnam, quibusdam iusto consequatur eveniet alias illo.
     </div>
