--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="empty"></div>
 
 
-    <script src="anchorSpy.js"></script>
+    <script src="anchorSpy.min.js"></script>
     <script src="script.js"></script>
 
  </body>
