--- a/demo/index.html
+++ b/demo/index.html
@@ -13,11 +13,11 @@
     <meta name="description" content="List of jQuery plugins and php classes from AVIL13">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" href="/css/style.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
-    <script src="/js/highlight.pack.js"></script>
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/highlight.pack.js"></script>
 </head>
 
 <body>
@@ -212,12 +212,12 @@ var Spy = $('<span class="cod">.menu</span>').anchorSpy({
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>
-        window.jQuery || document.write('<script src="/js/vendor/jquery-1.10.2.min.js"><\/script>')
+        window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
         </script>
         <script src="anchorSpy.js"></script>
         <script src="script.js"></script>
 
-        <script src="/js/all.js"></script>
+        <script src="js/all.js"></script>
 
 
         <script>
